Initial homepage code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel Nest</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TravelNest</title>
+  <link rel="stylesheet" href="styles/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Albert+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    Hello Bayraa. This is Travel Nest.
+
+  <!-- Header -->
+  <header>
+    <div class="logo">TravelNest</div>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Trips</a></li>
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Companies</a></li>
+        <li><a href="#">Plan your trip</a></li>
+      </ul>
+    </nav>
+    <div class="auth-buttons">
+      <button class="login">Нэвтрэх</button>
+      <button class="signup">Бүртгүүлэх</button>
+    </div>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Explore 5 regions of Mongolia</h1>
+      <p>Where do you want to go? Discover now!</p>
+      <input type="text" placeholder="Find your place..." />
+    </div>
+  </section>
+
+  <!-- Region Buttons -->
+  <section class="regions">
+    <h2>Choose your region</h2>
+    <div class="region-list">
+      <button>North</button>
+      <button>South</button>
+      <button>East</button>
+      <button>West</button>
+      <button>Center</button>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 TravelNest</p>
+  </footer>
+
+  <script src="scripts/script.js"></script>
 </body>
 </html>
