--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="header-right">
             <ul>
-                <li><a href="src/pages-html/home.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="src/pages-html/trips.html">Trips</a></li>
                 <li><a href="src/pages-html/destinations.html">Destinations</a></li>
                 <li><a href="src/pages-html/companies.html">Companies</a></li>
@@ -141,7 +141,7 @@
             </div>
             <div class="thirdboxtwo">
                 <h3>Center</h3>
-                <a href="src/pages-html/center.html">
+                <a href="src/pages-html/centraltest.html">
                     <img src="public/picture-source/ulaanbaatar.jpg" alt="Center.jpeg">
                 
                 </a>
