--- a/src/pages-html/north.html
+++ b/src/pages-html/north.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="TravelNest, Travel, Discover, Mongolia">
 <title>TravelNest</title>
 </head>      
-<body>-
+<body>
     <header>
         <div class="logo-container">
         <img src="../../public/picture-source/logo-wo-back.png" id="logo" alt="travelnestlogo.png">
@@ -36,7 +36,7 @@
     </header>
 
   <section class="banner">
-    <img src="../../public/picture-source/central.jpg" alt="Trip Hero">
+    <img src="../../public/picture-source/north.jpg" alt="Trip Hero">
   </section>
 
   <div class="tabs">
