--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <header>
-    <div class="logo">TravelNest</div>
+    <div class="logo">TravelNest This is test</div>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
