--- a/home.html
+++ b/home.html
@@ -139,7 +139,7 @@
             </div>
             <div class="thirdboxtwo">
                 <h3>Center</h3>
-                <a href="src/pages-html/center.html">
+                <a href="src/pages-html/centraltest.html">
                     <img src="public/picture-source/ulaanbaatar.jpg" alt="Center.jpeg">
                 
                 </a>
